@@ -6,8 +6,6 @@
       + Dr. Dolittle
 *** TODO [#B] read rss feeds
 *** TODO make a "score" counter for recognition: sum(avewpm)
-*** TODO make speed mode match letters ahead
-*** TODO make speed mode (and others)? show a running track of letters
 * Longer Term
 *** TODO More Fun Games!
 ***** TODO Keying practice using on or two keys for practicing keying.
@@ -20,6 +18,7 @@
 *** TODO add a training mode for pile-ups
     + increase the number of simultaneous signals
     + potentially at varying speed levels
+*** TODO make speed mode (and others)? show a running track of letters
 * Code Management
 *** STARTED document how to create new mode classes
 *** TODO create a template class
