@@ -99,6 +99,15 @@
     :ARCHIVE_CATEGORY: TODO
     :ARCHIVE_TODO: DONE
     :END:
+*** DONE make speed mode match letters ahead
+    - State "DONE"       from "TODO"       [2011-03-06 Sun 08:19]
+    :PROPERTIES:
+    :ARCHIVE_TIME: 2011-03-06 Sun 08:19
+    :ARCHIVE_FILE: ~/src/qtcw/qtcw/docs/TODO.org
+    :ARCHIVE_OLPATH: The TODO list
+    :ARCHIVE_CATEGORY: TODO
+    :ARCHIVE_TODO: DONE
+    :END:
 
 * Version: 0.5.1
 *** DONE A makerelease packaging script.
